# Long-Arithmetics

./: .gitignore  CMakeLists.txt  README.md
App/: CMakeLists.txt  main.cpp
LongArithmeticLib/: CMakeLists.txt  longarithmetic.cpp  longarithmetic.h
Tests/: CMakeLists.txt  test_add.cpp  test_add_negative.cpp  test_add_positive.cpp  test_compare.cpp  test_factorial.cpp  test_mul.cpp  test_pow.cpp  test_sub.cpp  test_sub_positive.cpp
include/: export.h  longarithmetic.h
src/: CMakeLists.txt  longarithmetic.cpp  main.cpp
